# kernel-module-crosslink

./: .gitignore  Jenkinsfile  LVDS_MIPI_bridge_MD6000.bit  LVDS_MIPI_bridge_MD6000_B3.bit  LVDS_MIPI_bridge_MD6000_B4.bit  LVDS_MIPI_bridge_MD6000_B5.bit  LVDS_MIPI_bridge_MD6000_B6.bit  LVDS_MIPI_bridge_MD6000_B7.bit  LVDS_MIPI_bridge_MDF6000.bit  LVDS_MIPI_bridge_MDF6000_B3.bit  LVDS_MIPI_bridge_MDF6000_B4.bit  LVDS_MIPI_bridge_MDF6000_B5.bit  LVDS_MIPI_bridge_MDF6000_B6.bit  LVDS_MIPI_bridge_MDF6000_B7.bit  Makefile  README.md  crosslink-cam.c  crosslink-i2c.c  crosslink-serial.py  crosslink-tty.c  crosslink.h  crosslink_cs1_res.sh  lattice_crosslink_i2c_sram_config_working.py  pyproject.toml
vdlg_lvds/: get_res.py  ioctl.py  lvds_set_res.py  serial.py  set_res.py  tamarisk.py  tamarisk_thermal.py  test_tamarisk.py
